* 版本 春节前的修改提交

--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -197,7 +197,8 @@
       border-bottom: 1px solid @product-border-color;
     }
     &-delete {
-      .padding(23px, lr);
+      .padding(10px, l);
+      .padding(23px, r);
       &-img {
         width: 18px;
         height: 18px;
