--- a/src/component/inventory/index.less
+++ b/src/component/inventory/index.less
@@ -13,6 +13,9 @@
     &::after {
       .border1px;
     }
+    &-box {
+      .flex(center, flex-start, row);
+    }
     .flex(center, space-between, row);
     .padding(28px, lr);
     .padding(20px, tb);
@@ -22,7 +25,7 @@
       .margin(20px, r);
     }
     &-title {
-      font-size: 30px;
+      font-size: 28px;
       color: #333333;
     }
     &-time {
