--- a/src/pages/style/home.less
+++ b/src/pages/style/home.less
@@ -5,7 +5,7 @@
 
 .@{home-prefix} {
   &-bg {
-    .background-image('//net.huanmusic.com/weapp/bg_home.png');
+    .background-image('//net.huanmusic.com/weapp/v1/bg_home.png');
     width: 100%;
     height: 260px;
   }
@@ -67,6 +67,11 @@
       }
       &-mar {
         .margin(14px, t);
+      }
+      &-into {
+        width: 11px;
+        height: 20px;
+        .margin(11px, l);
       }
       &-icon {
         width: 46px;
