--- a/src/pages/style/inventory.less
+++ b/src/pages/style/inventory.less
@@ -6,7 +6,10 @@
   &-header {
     .padding(30px, lr);
     &-item {
-      .margin(10px, r);
+      &-pur {
+        .margin(24px, r);
+      }
+      // .margin(10px, r);
       .flex(center, center, column);
       &-purchase {
         width: 26px;
@@ -28,7 +31,7 @@
   }
   &-input {
     .margin(10px, l);
-    width: 570px !important;
+    width: 590px !important;
     &-list {
       width: 610px !important;
       .margin(10px, l);
