--- a/src/pages/style/login.less
+++ b/src/pages/style/login.less
@@ -5,7 +5,7 @@
 @sign-input-box-size: 590px;
 
 .@{sign-prefix} {
-  .background-image('//net.huanmusic.com/weapp/bg.png');
+  .background-image('//net.huanmusic.com/weapp/v1/bg.png');
   display: flex;
   flex-direction: column;
   align-items: center;
