--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -98,12 +98,18 @@ button {
   background-color: #2a86fc;
   padding-left: 35px !important;
   padding-right: 80px !important;
+  padding-bottom: 10px !important;
 }
 
 .at-tabs__item {
   background-color: #2a86fc !important;
   color: #9DC8FF !important;
   font-size: 28px !important;
+  padding-left: 0px !important;
+  padding-bottom: 16px !important;
+  padding-right: 0px !important;
+  padding-top: 12px !important;
+  margin-right: 40px !important;
 }
 .at-tabs__item--active {
   color: #ffffff !important;
