--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -13,7 +13,9 @@
   .padding(30px, lr);
   .padding(33px, tb);
   .flex(center, space-between, row);
-  border-bottom: 1px solid #e3e3e3;
+  &::after {
+    .border1px;
+  }
   &-left {
     flex-direction: row;
     display: flex;
@@ -56,7 +58,7 @@
   &-time {
     font-size: 26px;
     line-height: 26px;
-    color: #666666;
+    color: #999999;
     .margin(17px, t);
   }
   &-price {
