--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -2,7 +2,7 @@
 
 @order-prefix: order;
 @order-time-pos: 200px;
-@order-status-icon: 111px;
+@order-status-icon: 100px;
 
 .@{order-prefix} {
   background-color: #F2F2F2;
@@ -24,7 +24,7 @@
     z-index: 100;
   }
   &-search {
-    width: 690px !important;
+    width: 610px !important;
   }
   &-container {
     position: absolute;
@@ -43,13 +43,16 @@
   &-header {
     .margin(20px, tb);
     .margin(30px, lr);
+    .flex(center, space-between, row);
   }
   &-time {
     position: relative;
     .flex(center, center, row) !important;
     width: 100%;
     height: 100px;
-    border-bottom: 1px solid  #e3e3e3;
+    &::after {
+      .border1px;
+    }
     &-date {
       .margin(30px, lr);
       min-width: 160px;
@@ -75,8 +78,8 @@
       font-size: 30px;
     }
     &-icon {
-      width: 10px;
-      height: 18px;
+      width: 13px;
+      height: 24px;
     }
     &-wid {
       .margin(11px, l);
@@ -118,7 +121,7 @@
 
   &-detail {
     &-bg {
-      .background-image('//net.huanmusic.com/weapp/bg_home.png');
+      .background-image('//net.huanmusic.com/weapp/v1/bg_home.png');
       width: 100%;
       height: 260px;
     }
@@ -135,7 +138,7 @@
       &-icon {
         width: @order-status-icon;
         height: @order-status-icon;
-        .margin(20px, r);
+        .margin(30px, r);
       }
       &-purchase {
         width: 92px;
