--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -100,7 +100,7 @@
         top: 0px;
       }
       &-inventory {
-        top: @product-header-height + 72px; 
+        top: @product-header-height + 80px; 
       }
     }
     &-left {
@@ -202,6 +202,7 @@
       color: @base-font-color;
       font-weight: bold;
       .padding(40px, t);
+      .margin(20px, b);
       .flex(center, center, row);
       &-close {
         position: absolute;
@@ -215,12 +216,16 @@
         }
       }
     }
+    &-mask {
+      display: flex;
+      flex: 1;
+    }
     &-content {
       display: flex;
       flex-direction: column;
       width: 100%;
       .padding(34px, lr);
-      .padding(135px, b);
+      .padding(135px + 20px, b);
       &-nonfooter {
         .padding(0, b) !important;
       }
@@ -490,6 +495,7 @@
       &-layout {
         z-index: 1200;
         &-mask {
+          display: flex;
           position: fixed;
           top: 0;
           left: 0;
@@ -499,6 +505,7 @@
           background-color: rgba(0, 0, 0, 0.7)
         }
         &-box {
+          z-index: 1200;
           position: absolute;
           bottom: 0;
           left: 0;
@@ -562,13 +569,15 @@
       font-size: 30px;
       color: #444444;
       width: 400px;
-      font-weight: bold;
       display: -webkit-box;
       overflow: hidden;
       text-overflow: ellipsis;
       line-clamp: 1;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
+    }
+    &-bold {
+      font-weight: bold;
     }
     &-price {
       font-size: 28px;
@@ -607,7 +616,6 @@
         }
         &-red {
           color: #FC4E44 !important;
-          font-weight: normal !important;
         }
         &-base {
           font-size: 28px;
@@ -620,6 +628,11 @@
           font-weight: bold;
         }
       }
+    }
+  }
+  &-refund {
+    &-input {
+      width: 710px !important;
     }
   }
 }
