--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -60,6 +60,9 @@
     font-size: 30px;
     color: #999999;
   }
+  &-maxWidth {
+    max-width: 500px;
+  }
   &-placeholder {
     font-size: 26px;
     color: #666666;
