--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -88,6 +88,9 @@
           color: #ffffff;
           .margin(5px, t);
         }
+        &-gray {
+          color: #7C7C7C;
+        }
         &-empty {
           width: 39px;
           height: 36px;
