--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -183,10 +183,10 @@
     &-img {
       position: absolute;
       left: (@member-card-width - @member-avator-size) / 2;
-      top: -(@member-avator-size - 40px);
-      .theme-shadow();
-      background-color: #f2f2f2;
-      border-radius: @member-avator-size / 2;
+      top: -(@member-avator-size - 60px);
+      // .theme-shadow();
+      // background-color: #f2f2f2;
+      // border-radius: @member-avator-size / 2;
     }
     &-avator {
       width: @member-avator-size;
