--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -94,6 +94,8 @@
   }
   &-list {
     height: 100%;
+    // border-top: #E3E3E3 solid 1px;
+    padding-bottom: 100px;
     &-pos {
       position: absolute;
       top: 100px;
@@ -116,6 +118,13 @@
     }
     &-empty {
       .padding(250px, b);
+    }
+    &-bottom {
+      width: 100%;
+      .padding(50px, tb);
+      .flex(center, center, row);
+      font-size: 26px;
+      color: #999999;
     }
   }
 
