--- a/src/pages/style/report.less
+++ b/src/pages/style/report.less
@@ -46,6 +46,11 @@
     &-text {
       font-size: 30px;
       color: #ffffff;
+      &-emphasis {
+        font-size: 34px;
+        font-weight: bold;
+        color: #ffffff;
+      }
     }
     &-icon {
       .margin(16px, l);
@@ -208,6 +213,29 @@
       &-touch {
         display: flex;
         flex: 1;
+      }
+    }
+  }
+
+  &-chart {
+    &-tabs {
+      height: 100px;
+      width: 690;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 0 35px;
+      border-bottom: 1px solid #E3E3E3;
+
+      &-tab {
+        height: 60px;
+        color: #999999;
+        font-size: 30px;
+        margin-right: 70px;
+        &-active {
+          border-bottom: 3px solid #2482FE;
+          color: #333333;
+        }
       }
     }
   }
