--- a/src/pages/style/user.less
+++ b/src/pages/style/user.less
@@ -25,6 +25,7 @@
     &-image {
       width: 140px;
       height: 140px;
+      border-radius: 70px;
     }
     &-box {
       display: flex;
@@ -109,11 +110,22 @@
       position: relative;
       font-size: 30px;
       color: #4d4d4d;
+      display: flex;
+      flex-direction: row;
       .padding(20px, tb);
       background-color: #f2f2f2;
       &::after {
         .border1px;
         border-color: #cccccc !important;
+      }
+      margin-top: 5px;
+
+      &-title {
+        display: flex;
+        align-items: center;
+        margin-right: 10px;
+        font-size: 30px;
+        width: 150px;
       }
     }
     &-phone {
@@ -126,6 +138,7 @@
     &-img {
       width: 80px;
       height: 80px;
+      border-radius: 40px;
     }
   }
   &-about {
