--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -100,6 +100,9 @@
       position: absolute;
       top: 100px;
       bottom: 0;
+      &-search {
+        top: 0 !important;
+      }
     }
     &-item {
       width: 100%;
