--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -248,6 +248,7 @@
       left: 0;
       right: 0;
       &-add {
+        position: relative;
         z-index: @member-search-zindex;
         .flex(center, center, row);
         border-radius: 30px;
