--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -24,10 +24,11 @@
     position: fixed;
     background-color: @theme-color;
     .flex(center, space-between, row);
-    .padding(20px);
+    .padding(20px, lr);
     top: 0;
     left: 0;
     right: 0;
+    height: 100px;
 
     &-button {
       color: @theme-color;
@@ -45,7 +46,7 @@
       right: 10px;
       border-radius: 50%;
       background-color: #FC4E44;
-      font-size: 22px;
+      font-size: 24px;
       .flex(center, center);
       height: 37px;
       min-width: 37px;
@@ -120,7 +121,7 @@
     }
 
     &-left {
-      width: 150px;
+      width: 154px;
       display: flex;
       flex-direction: column;
       background-color: @product-list-left-bg-color;
@@ -133,7 +134,10 @@
         font-size: @normal-text-fontsize;
 
         &-suspension {
+          display: flex;
+          .padding(24px, l);
           flex-direction: column;
+          align-items: flex-start;
         }
 
         &-active {
@@ -414,7 +418,7 @@
       left: 0;
       right: 0;
       z-index: 100;
-      background-color: #fafafa;
+      background-color: #ffffff;
       .padding(40px, t);
       .padding(50px, b);
       .padding(30px, lr);
@@ -637,8 +641,7 @@
 
   &-row {
     position: relative;
-    .padding(24px, tb);
-    .padding(40px, lr);
+    .padding(24px);
 
     &-icon {
       .margin(16px, lr);
@@ -669,10 +672,15 @@
     &-normal {
       font-size: 28px;
       color: @base-font-color;
+      &-title {
+        font-size: 30px;
+        color: #333333;
+      }
     }
 
     &-name {
       font-size: 30px;
+      font-weight: bold;
       color: #444444;
       width: 400px;
       display: -webkit-box;
