--- a/src/component/modal/modal.less
+++ b/src/component/modal/modal.less
@@ -45,8 +45,8 @@
     display: flex;
     flex-direction: column;
     &-tip {
-      font-size: 26px;
-      color: #999999;
+      font-size: 29px;
+      color: #777777;
       .margin(27px, b);
     }
     &-item {
@@ -58,7 +58,15 @@
       &-title {
         position: relative;
         font-size: 30px;
-        min-width: 120px;
+        &-nor {
+          width: 120px;
+        }
+        &-len {
+          width: 170px;
+        }
+        &-short {
+          width: 70px !important;
+        }
         color: #4d4d4d;
         .margin(22px, r);
         &-main {
@@ -67,9 +75,6 @@
           left: -20px;
           color: #FC4E44;
           font-size: 32px;
-        }
-        &-short {
-          min-width: 70px !important;
         }
       }
       &-input {
