--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -167,11 +167,13 @@
     }
     &-name {
       position: relative;
+      line-height: 36px;
       &-level {
         position: absolute;
         top: 8px;
         // width: 60px;
         right: -80px - 20px;
+        line-height: 16px;
         font-size: 16px;
         color: #D8AE6D;
         border: 2px solid #D8AE6D;
