--- a/src/pages/style/report.less
+++ b/src/pages/style/report.less
@@ -87,6 +87,13 @@
       font-size: 28px;
       color: @report-text;
     }
+    &-costom {
+      .flex(center, center);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
   &-card {
     .margin(20px, t);
