--- a/src/pages/style/user.less
+++ b/src/pages/style/user.less
@@ -106,17 +106,36 @@
     &-button {
       .margin(80px, t);
     }
+    &-area {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      .padding(30px, lr);
+      font-size:30px;
+      font-weight:500;
+      color:rgba(77,77,77,1);
+    }
+    &-box {
+      width:690px;
+      background:rgba(255,255,255,1);
+      border-radius:20px;
+    }
     &-input {
       position: relative;
       font-size: 30px;
       color: #4d4d4d;
       display: flex;
+      .padding(30px, lr);
       flex-direction: row;
       .padding(20px, tb);
-      background-color: #f2f2f2;
       &::after {
         .border1px;
         border-color: #cccccc !important;
+      }
+      &-nobar {
+        &::after {
+          height: 0px !important;
+        }
       }
       margin-top: 5px;
 
